权限完善,异常处理完善

--- a/miscsoft-service-provide-user/src/main/webapp/html/sys/roleAccessManager.html
+++ b/miscsoft-service-provide-user/src/main/webapp/html/sys/roleAccessManager.html
@@ -9,11 +9,17 @@
 <link rel="stylesheet" href="/lay/css/layui.css">
 </head>
 <body>
-	<form class="layui-form">
+	<form class="layui-form" >
 	    <div class="layui-form-item">
 	        <label class="layui-form-label">选择权限</label>
 	        <div class="layui-input-block">
 	            <div id="RATree"></div>
+	        </div>
+	    </div>
+	    <div class="layui-form-item">
+	        <div class="layui-input-block">
+	            <button class="layui-btn" type="button"  onclick="subForm()" data-type="submit" >提交</button>
+	            <button class="layui-btn layui-btn-primary"  data-type="reset">还原</button>
 	        </div>
 	    </div>
 	</form>
@@ -32,7 +38,7 @@ layui.use(['jquery', 'authtree', 'form', 'layer'], function(){
 	var authtree = layui.authtree;
 	var form = layui.form;
 	var layer = layui.layer;
-	console.log(roleId+"-------------------------------------------------");
+//	console.log(roleId+"-------------------------------------------------");
 	// 一般来说，权限数据是异步传递过来的
 	//var trees = "[{ 'id': 1, 'name': '用户管理', 'pid': 0 },{ 'id': 2, 'name': '用户组管理', 'pid': 0 },{ 'id': 3, 'name': '角色管理', 'pid': 2 },{ 'id': 4, 'name': '添加角色', 'pid':  3},{ 'id': 5, 'name': '角色列表', 'pid': 3 },{ 'id': 6, 'name': '管理员管理', 'pid': 0 },{ 'id': 7, 'name': '添加管理员', 'pid': 6 },{ 'id': 8, 'name': '管理员列表', 'pid': 6 }]";
 	//var opt = "{'primaryKey':'id', 'parentKey':'pid'}";
@@ -41,7 +47,7 @@ layui.use(['jquery', 'authtree', 'form', 'layer'], function(){
 		dataType: 'json',
 		success: function(data){
             var trees = data.data;
-            console.log(trees);
+//            console.log(trees);
             //authtree.listConvert(trees);
             //authtree.listConvert(trees,opt);
             // 如果后台返回的不是树结构，请使用 authtree.listConvert 转换
@@ -52,11 +58,42 @@ layui.use(['jquery', 'authtree', 'form', 'layer'], function(){
 				autochecked:true,
 				autoclose: true,
 				nameKey:'name',
-				valuekey:'id'
+				valuekey:'id' 
 				
 			});
         }
     });
 });
+
+function subForm() {
+	layui.use('jquery', function () {
+		var $ = layui.jquery;
+//		console.log("submit-------------------");
+		var ids = "";
+        $("input:checked").each(function(i){//把所有被选中的复选框的值存入数组
+            ids = ids + $(this).val() + ",";
+        }); 
+//		console.log(ids);
+		$.ajax({
+			url: '/role/accessManage',
+			type: "POST",
+			data: {"roleId" : roleId, "ids" : ids},
+			dataType: 'json',
+			success: function(data){
+//				console.log(data);
+				if(data.status == 200){
+					layer.alert(data.msg, {icon: 6});
+					//var index = parent.layer.getFrameIndex(window.name);
+					//parent.layer.close(index);
+				}else{
+					layer.alert(data.msg, {icon: 2});
+				}
+			}
+		});
+	});
+}
+</script>
+<script type="text/javascript">
+	
 </script>
 </html>
