推送配置文件

--- a/miscsoft-service-provide-user/src/main/webapp/html/sys/access.html
+++ b/miscsoft-service-provide-user/src/main/webapp/html/sys/access.html
@@ -86,7 +86,7 @@ a:hover {
 				}
             
         	});
-          console.log(access);
+//          console.log(access);
 //          var tree =  JSON.stringify(access);
 //          console.log(tree);
           //初始化layer.tree  
@@ -289,7 +289,7 @@ a:hover {
 		    }
 		    var accessName = $(this).siblings("a").children("cite").html();
 		    
-			console.log(accessName);
+//			console.log(accessName);
 		   var id=$(this).parent("li").children("cite").html(); 
 		 layer.confirm('确定要删除？该分类下的课程亦将删除！', {  
 		  btn: ['删除','取消']   
