--- a/miscsoft-service-provide-user/src/main/webapp/html/login.html
+++ b/miscsoft-service-provide-user/src/main/webapp/html/login.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
+	xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-	<form action="/main/ajaxLogin" method="post" >
-		<lable>username</lable><input type="text" name="username"/>
-		<lable>password</lable><input type="text" name="password"/>
-		<input type="submit" value="登录">
+	<form >
+		<div>
+			<lable>username</lable>
+			<input type="text" id="username" name="username" />
+		</div>
+		<div>
+			<lable>password</lable>
+			<input type="text" id="password" name="password" />
+		</div>
 	</form>
 	<a>所有人都能看到</a>
 	<a shiro:hasRole="manager">manager才能看到</a>
 </body>
+
 </html>
