--- a/miscsoft-service-provide-user/src/main/webapp/html/sys/role.html
+++ b/miscsoft-service-provide-user/src/main/webapp/html/sys/role.html
@@ -126,13 +126,13 @@
                       var iframe = window['layui-layer-iframe' + index];
                       // 向子页面的全局函数child传参
                       iframe.child(data.id);
-  	        	  }//,
+  	        	  }
   	        	});
             } else if(obj.event === 'del'){
                 layer.confirm('真的删除行么', function(index){
                     console.log(data);
                     $.ajax({
-                        url: "/categray/delete",
+                        url: "/role/delete",
                         type: "POST",
                         data:{"id":data.id},//"id":data.id,"memthodname":"deleteuv","aid":data.aid
                         dataType: "json",
@@ -149,45 +149,11 @@
                     });
                 });
             } else if(obj.event === 'edit'){
-
-                layer.prompt({
-                    formType: 2
-                    ,title: '修改 ID 为 ['+ data.id +'] 的名称'
-                    ,value: data.name
-                }, function(value, index){
-                    EidtUv(data,value,index,obj);
-                });
-
+            	create(obj);
             }
         });
 	});
 		
-	function  EidtUv(data,value,index,obj) {
-		var categray = {"id":data.id, "name":value, "createTime":data.createTime};
-	    $.ajax({
-	        url: "/categray/update",
-	        type: "POST",
-	        contentType: "application/json;charset=UTF-8",
-	        data:  JSON.stringify(categray),
-	        dataType: "json",
-	        success: function(data){
-				console.log(data);
-	            if(data.status==200){
-	               //关闭弹框
-	                layer.close(index);
-	                //同步更新表格和缓存对应的值
-	                obj.update({
-	                    name: value
-	                });
-	                layer.msg("修改成功", {icon: 6});
-	            }else{
-	                layer.msg("修改失败", {icon: 5});
-	            }
-	        }
-
-	    });
-	}	
-	
 </script>
 
 <script type="text/javascript">
@@ -198,7 +164,7 @@
 	 * text: 用户输入的内容
 	 * index: 窗体本身
 	 */
-	function create() {
+	function create_history() {
 		layer.prompt({title: '输入角色名称', formType: 2}, function(text, index){
 //		    console.log('演示完毕！您的口令：'+ text );
 		    $.ajax({
@@ -217,7 +183,55 @@
 	            
 	        });
 		});
-	}	
+	}
+	
+	function create(obj) {//如果obj为空,则为添加操作,否则为修改操作
+		var id = "";
+		if(obj != null){
+			id = obj.data.id;
+		}
+		layer.open({
+      	  type: 2,
+      	  area: ['500px', '350px'],
+      	  fixed: false, //不固定
+      	  btn: ['提交', '关闭'],
+      	  maxmin: true,
+      	  content: '/role/addRole?id='+id,
+      	  title: '角色添加',
+      	  btn1:function(index,layero){
+      		var detailForm = layer.getChildFrame('form', index);
+    		var rolename = $('#rolename', detailForm).val();//直接拿到子窗口的值
+    		var desc = $('#desc', detailForm).val();//直接拿到子窗口的值
+//    		console.log("id:"+id+",rolename:"+rolename+",desc:"+desc);
+    		$.ajax({
+	           type: "POST",
+	           url: "/role/add",
+	           data: {'id': id, 'rolename': rolename, 'descprit': desc},
+	           dateType:"json",
+	           success: function (data) {
+		           	if(data.status == 200){
+		           		if(obj != null){
+		           			obj.update({
+		           				rolename: rolename,
+		           				descprit: desc
+			                });
+		           			layer.msg(data.msg, {icon: 6});
+		           			layer.close(index);
+		           		}else{
+		           			location.reload();
+		           		}
+		           	}else{
+		           		layer.alert(data.msg, {icon: 2});
+		           	}
+	           }
+	           
+	        });
+      	  },
+	          btn2: function(){
+	       		  layer.closeAll();
+	       	  }
+      });
+	}
 </script>
 </body>
 </html>
