--- a/miscsoft-service-provide-user/src/main/webapp/html/sys/createAccess.html
+++ b/miscsoft-service-provide-user/src/main/webapp/html/sys/createAccess.html
@@ -13,7 +13,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">请输入标题</label>
 			<div class="layui-input-block">
-				<input type="text" name="title" lay-verify="required" id="title"
+				<input type="text" id="title" name="title" lay-verify="required" id="title"
 					autocomplete="off" placeholder="请输入标题" class="layui-input">
 			</div>
 		</div>
