--- a/miscsoft-service-provide-user/src/main/webapp/html/sys/role.html
+++ b/miscsoft-service-provide-user/src/main/webapp/html/sys/role.html
@@ -119,7 +119,7 @@
   	        	  fixed: false, //不固定
 //  	        	  btn: ['提交', '关闭'],
   	        	  maxmin: true,
-  	        	  content: 'roleAccessManager.html?roleId='+data.id,
+  	        	  content: 'roleAccessManager.html',
   	        	  title: '权限管理',
   	        	  success:function(layero, index){
   	        		  // 获取子页面的iframe
