--- a/miscsoft-service-provide-user/src/main/webapp/html/sys/user.html
+++ b/miscsoft-service-provide-user/src/main/webapp/html/sys/user.html
@@ -34,11 +34,11 @@
 	  	<button class="layui-btn" data-type="isAll">验证是否全选</button>
 	</div>
 	<!-- 表格主体 -->
- 	<table class="layui-hide" id="categray" lay-filter="filter"></table>
+ 	<table class="layui-hide" id="user" lay-filter="filter"></table>
 <!--  lay-ui js操作开始 -->	
 <!-- 加上操作栏 --> 	
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-mini" lay-event="detail">查看</a>
+    <a class="layui-btn layui-btn-primary layui-btn-mini" lay-event="auth">分配角色</a>
     <a class="layui-btn layui-btn-mini" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-mini" lay-event="del">删除</a>
 </script>
@@ -49,14 +49,18 @@
 	  var table = layui.table;
 	  
 	  table.render({
-	    elem: '#categray'
+	    elem: '#user'
 	    ,id:'idForTable'
-	    ,url:'/categray/list'
+	    ,url:'/user/pageUser'
 	    ,cols: [[
 	      {type:'checkbox'}
 	      ,{field:'id', width:200, title: 'ID'}
-	      ,{field:'name', width:200, title: '名称'}
-	      ,{field:'createTime', width:335, title: '创建时间', sort: true}
+	      ,{field:'name', width:150, title: '账号'}
+	      ,{field:'username', width:80, title: '昵称'}
+	      ,{field:'rolename', width:100, title: '角色'}
+	      ,{field:'age',width:100,title:'年龄',sort:true}
+	      ,{field:'birthday', width:200, title: '生日'}
+	      ,{field:'descript', width:100, title: '描述'}
 	      ,{field:'right', title: '操作', toolbar:"#barDemo"}
 	    ]]
 	    ,page: {
@@ -92,7 +96,8 @@
 		
 				     table.reload('idForTable', {
 				         where: {
-				             name: demoReload.val()
+				             name: demoReload.val(),
+				             username:demoReload.val()
 				         }
 				     });
 				 }
@@ -113,13 +118,44 @@
         table.on('tool(filter)', function(obj){
         	console.log(obj);
             var data = obj.data;
-            if(obj.event === 'detail'){
-                layer.alert('ID：'+ data.id + ' 的查看操作');
+            if(obj.event === 'auth'){
+            	layer.open({
+	  	        	type: 2,
+	  	        	area: ['400px', '600px'],
+	  	        	fixed: false, //不固定
+	  	       	 	btn: ['提交', '关闭'],
+	  	        	maxmin: true,
+	  	        	content: '/user/userRoleManager?id='+data.id,
+	  	        	title: '角色管理',
+	  	        	btn1:function(index,layero){
+	  	        		var detailForm = layer.getChildFrame('form', index);
+//	  	        		console.log(detailForm.serialize());
+	  	        		$.ajax({
+	  	                    type:"post",
+	  	                    url:"/user/setRole",
+	  	                    data: detailForm.serialize(),//表单数据
+	  	                    success:function(data){
+	  	                        if(status == 200){
+	  	                        	layer.msg(data.data, {icon: 6});//保存成功提示
+	  	                        }else{
+	  	                        	layer.msg(data.msg, {icon: 2});
+	  	                        }
+	  	                        
+	  	                        layer.closeAll('iframe');//关闭弹窗
+	  	                    }
+	  	                });
+	  	        	},
+	  	        	btn2:function(index, layero){
+	  	        		 layer.closeAll('iframe');//关闭弹窗
+	  	        	}
+  	        	});
+//                layer.alert('ID：'+ data.id + ' 的查看操作');
+			
             } else if(obj.event === 'del'){
                 layer.confirm('真的删除行么', function(index){
                     console.log(data);
                     $.ajax({
-                        url: "/categray/delete",
+                        url: "/user/delete",
                         type: "POST",
                         data:{"id":data.id},//"id":data.id,"memthodname":"deleteuv","aid":data.aid
                         dataType: "json",
